testsuite/poke.pkl/int-struct-type-diag-15.pk
/* { dg-do compile } */

type Foo =
  struct int<32>
  {
    struct int<10>  /* { dg-error "invalid total size.*\n.*expected 10" } */
    {
      byte a;
      byte b;
    } la;

   uint<16> le;
  };
